# netflix-movies-client

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: workflow.yml
requirements/: requirements.dev.in  requirements.dev.txt  requirements.in  requirements.lint.in  requirements.lint.txt  requirements.test.in  requirements.test.txt  requirements.txt
src/netflix/movies/client/: __init__.py  clients.py  constants.py  exceptions.py  http.py  stubs.py  warnings.py
src/netflix/movies/client/asynchronous/: __init__.py  clients.py  http.py
src/netflix/movies/client/asyncio/: clients.py  exceptions.py  http.py
src/netflix/movies/client/types/: api.py  common.py  films.py  genres.py  persons.py  roles.py
tests/unit/: conftest.py
