[metadata]
name = netflix-movies-client
version = attr: netflix.movies.client.version.__version__
description = A requests-based client for Netflix Movies API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = true
python_requires = >=3.10
package_dir = =src
packages = find_namespace:
install_requires =
    orjson==3.8.0
    pydantic==1.10.2
    requests==2.28.1
    aiohttp==3.8.3

[options.packages.find]
where = src
